# gtkgreet

./: .build.yml  README.md  actions.c  auth_question.c  auth_question.h  config.h  gtkgreet.c  gtkgreet.h  main.c  meson.build  meson_options.txt  proto.c  proto.h  window.c  window.h
gtkgreet/: actions.c  actions.h  config.c  gtkgreet.c  gtkgreet.h  main.c  meson.build  proto.c  window.c  window.h
man/: gtkgreet.1.scd
po/: POTFILES.in  ar.po  de.po  es.po  fr.po  gtkgreet.pot  meson.build  ru.po
